force-app/main/default/objects/AddSources__mdt/AddSources__mdt.object-meta.xml
<CustomObject>
    <label>Source</label>
    <pluralLabel>Sources</pluralLabel>
</CustomObject>