force-app/main/default/objects/AddSources__mdt/fields/ContributorType__c.field-meta.xml
<CustomField>
    <fullName>ContributorType__c</fullName>
    <label>ContributorType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPLOYEE</fullName>
                <default>true</default>
                <label>EMPLOYEE</label>
            </value>
            <value>
                <fullName>EMPLOYER</fullName>
            </value>
            <value>
                <fullName>LOAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>