force-app/main/default/objects/AddSources__mdt/fields/Discretionary_Match__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match__c</fullName>
    <label>Discretionary_Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>