force-app/main/default/objects/AddSources__mdt/fields/Plan_Source_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Plan_Source_Frequency__c</fullName>
    <description>Mapped to planSourceFrequency</description>
    <label>Plan Source Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYROLL</fullName>
                <default>true</default>
                <label>PAYROLL</label>
            </value>
            <value>
                <fullName>ANNUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>