force-app/main/default/objects/AddSources__mdt/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if Proposal__c.Profit_Sharing__c != null || &apos;No&apos;  == Checked</description>
    <label>Profit Sharing</label>
    <type>Checkbox</type>
</CustomField>