force-app/main/default/objects/AddSources__mdt/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>SourceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEFERRAL</fullName>
                <default>true</default>
                <label>DEFERRAL</label>
            </value>
            <value>
                <fullName>LOAN</fullName>
            </value>
            <value>
                <fullName>MATCH</fullName>
            </value>
            <value>
                <fullName>PROFIT</fullName>
            </value>
            <value>
                <fullName>RELATED_ROLLOVER</fullName>
            </value>
            <value>
                <fullName>ROLLOVER</fullName>
            </value>
            <value>
                <fullName>SAFE</fullName>
            </value>
            <value>
                <fullName>QMAC</fullName>
            </value>
            <value>
                <fullName>QNEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>