force-app/main/default/objects/AddSources__mdt/listViews/AppendixC.listView-meta.xml
<ListView>
    <fullName>AppendixC</fullName>
    <columns>Name__c</columns>
    <columns>SourceId__c</columns>
    <columns>SourceType__c</columns>
    <columns>ContributorType__c</columns>
    <columns>Safe_Harbor__c</columns>
    <columns>Roth_Contributions__c</columns>
    <columns>Discretionary_Match__c</columns>
    <columns>Discretionary_Match_Formula__c</columns>
    <columns>Profit_Sharing__c</columns>
    <columns>isRequired__c</columns>
    <columns>Plan_Source_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>AppendixC</label>
    <language>en_US</language>
</ListView>